[gd_scene load_steps=9 format=3 uid="uid://cg5j857nshce0"]

[ext_resource type="Texture2D" uid="uid://cqjonhe0nj8vw" path="res://media/icons/icon_species_lamia.png" id="1_758d7"]
[ext_resource type="Script" path="res://scripts/UI/Pages/Population/TaskPopulation.gd" id="1_gpexy"]
[ext_resource type="Texture2D" uid="uid://b2p3sduhni0o5" path="res://media/icons/icon_task.png" id="2_4rbqi"]
[ext_resource type="Texture2D" uid="uid://cejtorqjwaj7c" path="res://media/icons/icon_task_idle.png" id="2_hfwrx"]
[ext_resource type="PackedScene" uid="uid://bt82ve604ccni" path="res://scenes/UI/Global/tooltip_shower.tscn" id="5_hvmaj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jofwl"]
bg_color = Color(0.243137, 0.243137, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.390075, 0.45, 0.2385, 1)
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5juvu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdmq4"]
bg_color = Color(0.243137, 0.243137, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.529412, 0.392157, 0.172549, 1)
border_blend = true

[node name="TaskPopulation" type="PanelContainer"]
custom_minimum_size = Vector2(225, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_jofwl")
script = ExtResource("1_gpexy")

[node name="Control" type="Control" parent="."]
top_level = true
layout_mode = 2

[node name="AssignTaskHolder" type="Control" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/AssignTaskHolder"]
layout_mode = 1
offset_right = 200.0
offset_bottom = 24.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5juvu")

[node name="TaskList" type="ItemList" parent="Control/AssignTaskHolder/PanelContainer"]
unique_name_in_owner = true
z_index = 5
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/panel = SubResource("StyleBoxFlat_bdmq4")
auto_height = true
item_count = 1
fixed_icon_size = Vector2i(16, 16)
item_0/text = "Something"
item_0/icon = ExtResource("2_hfwrx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 3

[node name="TaskPopulationInfo" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PopulationIcon" type="TextureRect" parent="MarginContainer/TaskPopulationInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_758d7")
expand_mode = 1
stretch_mode = 5

[node name="NameActionContainer" type="VBoxContainer" parent="MarginContainer/TaskPopulationInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2

[node name="PopulationNameLabel" type="Label" parent="MarginContainer/TaskPopulationInfo/NameActionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cool Snake Guy"

[node name="ActionContainer" type="HBoxContainer" parent="MarginContainer/TaskPopulationInfo/NameActionContainer"]
layout_mode = 2

[node name="AssignTaskButton" type="Button" parent="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/icon_max_width = 20
icon = ExtResource("2_4rbqi")
icon_alignment = 1

[node name="TooltipShower" parent="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/AssignTaskButton" instance=ExtResource("5_hvmaj")]
layout_mode = 0
tooltip_label_text = "Assign To Task"

[node name="CurrentActionContainer" type="VBoxContainer" parent="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="CurrentActionLabel" type="Label" parent="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/CurrentActionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.611765, 0.611765, 1)
theme_override_font_sizes/font_size = 12
text = "Doing"
horizontal_alignment = 1

[node name="CurrentActionProgress" type="ProgressBar" parent="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/CurrentActionContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
value = 0.5
show_percentage = false

[connection signal="item_clicked" from="Control/AssignTaskHolder/PanelContainer/TaskList" to="." method="_on_task_list_item_clicked"]
[connection signal="mouse_exited" from="Control/AssignTaskHolder/PanelContainer/TaskList" to="." method="_on_assign_task_holder_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/AssignTaskButton" to="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/AssignTaskButton/TooltipShower" method="_on_show_tooltip"]
[connection signal="mouse_exited" from="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/AssignTaskButton" to="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/AssignTaskButton/TooltipShower" method="_on_hide_tooltip"]
[connection signal="pressed" from="MarginContainer/TaskPopulationInfo/NameActionContainer/ActionContainer/AssignTaskButton" to="." method="_on_assign_task_button_pressed"]
